(lang dune 3.14)

(name riscv_downstream_sail_task_lfx)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Maharshi Basu")

(maintainers "Maharshi Basu")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name riscv_downstream_sail_task_lfx)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
